<LinearLayout
    android:id="@+id/register_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/txt_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="30sp"
        android:layout_marginBottom="32dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:inputType="text"
            android:hint="@string/enter_your_username"
            android:minHeight="48dp"
            android:textSize="14sp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:inputType="textPassword"
            android:hint="@string/enter_your_password"
            android:minHeight="48dp"
            android:textSize="14sp"/>

        <ImageButton
            android:id="@+id/button_show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginVertical="8dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:contentDescription="Hiện mật khẩu"
            android:src="@drawable/ic_visibility_off" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_your_email"
            android:minHeight="48dp"
            android:textSize="14sp"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <EditText
            android:id="@+id/txt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:paddingHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:inputType="phone"
            android:hint="@string/enter_your_phone"
            android:minHeight="48dp"
            android:textSize="14sp"/>
    </FrameLayout>

    <Button
        android:id="@+id/container_button_primary_big_inactive"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_margin="20dp"
        android:background="@drawable/img_rect_button_primary_big_inactive"
        android:text="@string/register"
        android:textColor="#FFFFFFFF" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/txt_dont_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="14sp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:paddingStart="4dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_reset"
            android:textSize="14sp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/forgot_password_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="RESET NOW!"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:paddingStart="4dp"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>


    <FrameLayout
        android:id="@+id/container_button_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/img_button_google"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:scaleType="centerInside"
                android:src="@drawable/img_button_google" />

            <View
                android:layout_width="16dp"
                android:layout_height="match_parent" />

            <ImageView
                android:id="@+id/img_icon_facebook"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:scaleType="centerInside"
                android:src="@drawable/img_button_facebook" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
